# kanban_python

./: .env  .env.example  .env.prod  .env.prod.example  .gitattributes  .gitignore  .pre-commit-config.yaml  DUMMY  KAN_PLAN  KAN_PLAN.md  Makefile  README.md  TEAM_PLAYBOOK.md  apply_migration.bat  apply_migrations.py  check_and_fix.py  check_db.py  check_db_output.py  check_migration_applied.py  copy_ai_avatars.bat  docker-compose.prod.yml  docker-compose.yml  read_logs.py  run_migrate.py
.cursor/rules/: coordination-with-user.mdc  no-text-instructions.mdc  nothing-without-permission.mdc
.gigaide/: gigaide.properties
.github/workflows/: prod-deploy.yml
backend/: .gitignore  Dockerfile  check_db.py  delete_task_ewewe.py  entrypoint.prod.sh  pytest.ini  requirements.txt  run_migrate.py  run_migrations.py
backend/config/: __init__.py  asgi.py  celery.py  routers.py  routing.py  urls.py  wsgi.py
deploy/: apply-nginx-downloads.sh  nginx-kanban-frontend-fix.conf  server-sync-files.txt
frontend/: .eslintrc.cjs  QUICKSTART.md  README.md  create-icon.py  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/scripts/: copy-pwa-icons.cjs
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: README.md  icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
frontend/templates_var/: 1.html  2.html  3.html  4.html  LukInterLab_Dashboard_Director.html
infra/: Dockerfile  docker-compose.yml
(+554 files in other folders)
